--- a/style.css
+++ b/style.css
@@ -158,4 +158,11 @@ ul li span:hover{
         border-radius: 0;
         justify-content: center;
     }
+
+    #row{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        justify-content: center; 
+    }
 }
